# bevy_trench_template

./: .gitignore  Cargo.toml  README.md  justfile
assets/maps/: test.map
assets/maps/autosave/: test.1.map
src/: main.rs
