[package]
name = "bevy_trench_template"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { version = "0.5.0", features = [
    "3d",
    "default-collider",
    "collider-from-mesh",
    "bevy_scene",
    "parry-f32",
] }
bevy = { version = "0.18.0", features = ["free_camera"] }
bevy_trenchbroom = "0.12.0"
bevy_trenchbroom_avian = "0.12.0"
